05-kubernetes/grade-submission-service/grade-submission-portal/grade-submission-portal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grade-submission-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: grade-submission-portal
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grade-submission
        app.kubernetes.io/component: frontend
        app.kubernetes.io/instance: grade-submission-portal
    spec:
      containers:
        - name: grade-submission-portal
          image: rslim087/kubernetes-course-grade-submission-portal
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: "/healthz"
              port: 5001
            initialDelaySeconds: 15
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: "/readyz"
              port: 5001
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"
            limits:
              memory: "128Mi"
          ports:
            - containerPort: 5001
